Fix minor deprecations